Actualiza flujo de trabajo de GitHub Actions y README

--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install server dependencies
         run: |
-          cd backend
+          cd server
           npm install
 
       - name: Build the project
